Added lore supplication to Item